# entropic-crmarenapro

./: Dockerfile  README.md  pyproject.toml  sample.env
crm/: __init__.py  entropy.py  evaluator.py  scorer.py  tasks.py
data/: crmarena_b2b_tasks.json
src/: agent.py  server.py
